replace binary with dualistic or dualism

--- a/epub_src/OEBPS/Text/02.xhtml
+++ b/epub_src/OEBPS/Text/02.xhtml
@@ -80,7 +80,7 @@
 <div><img alt="figure 4, multi level indirect communication structure graph" src="../Images/4.png"/></div>
 
 
-  <h2 id="sigil_toc_id_7" lang="zh-hans">2.3 <span lang="zh-hans">“沟通枢纽”的权力</span><span lang="en">The Power of the "Communication Hub"</span></h2>
+  <h2 id="sigil_toc_id_7">2.3 <span lang="zh-hans">“沟通枢纽”的权力</span><span lang="en">The Power of the "Communication Hub"</span></h2>
 
 <h3 class="sigil_not_in_toc">a.<span lang="zh-hans">合并信息处理</span><span lang="en">Merge information processing.</span></h3>
 
