--- a/epub_src/OEBPS/Text/pre04fzty.xhtml
+++ b/epub_src/OEBPS/Text/pre04fzty.xhtml
@@ -54,7 +54,7 @@
 <p lang="zh-hans">代议制使得权力更新不再通过强力，但仍然是数量求和结构。权力意志可通过操纵代议制的数量求和扭曲社会意志；反之数量和的压力又会迫使代议制纵容消费主义和民族主义。</p>
 <p lang="en">Representative democracy eliminates the need for force in power renewal but still operates within a structure based on the scalar summation. Power will can distort societal will by manipulating the scalar summation within the representative system. Conversely, the pressure of the scalar sum can compel the representative system to tolerate consumerism and nationalism.</p>
 
-<p lang="zh-hans"><a href="08.xhtml"><span lang="zh-hans">第八章</span><span lang="en">Chapter 8</span></a></p>
+<p><a href="08.xhtml"><span lang="zh-hans">第八章</span><span lang="en">Chapter 8</span></a></p>
 
 <p lang="zh-hans">是否能让社会意志无需通过压力和强力，即可与权力意志无阻碍地沟通，从而使得社会意志无滞后地随时实现？</p>
 <p lang="en">Is it possible to let societal will communicate with the will of power without any obstruction, without the need of pressure and force, thus allowing societal will to be realized without lag?</p>
