fix some format miss

--- a/epub_src/OEBPS/Text/04.xhtml
+++ b/epub_src/OEBPS/Text/04.xhtml
@@ -166,8 +166,8 @@
 
   <p lang="zh-hans">向量求和的价值在于二者不管分歧多大，哪怕是179°，也构成平行四边形，尽管能得到向量和非常小（图7是比例不准确的示意）；而二者不管分歧多小，哪怕只有1°，同样构成平行四边形，且向量和就在1°的中间（图8）——只要是按平行四边形法则求出的向量和，永远是在两个向量的中间位置，即通常所说的折中。</p>
 <p lang="en">The value of vector summation lies in the fact that regardless of how large the divergence is, even if it is 179°, it still forms a parallelogram (Figure 7, with an inaccurately proportioned illustration), although the resulting vector sum is very small. On the other hand, regardless of how small the divergence is, even if it's just 1°, it still forms a parallelogram, and the vector sum lies in the middle of the 1° angle (Figure 8). As long as the vector sum is calculated according to the Law of Parallelograms, it will always be positioned in the middle of the two vectors, commonly referred to as a compromise.</p>
-<div><img alt="007" src="../Images/7.png"/></div>
-<div><img alt="007" src="../Images/8.png"/></div>
+<div><img alt="figure7" src="../Images/7.png"/></div>
+<div><img alt="figure8" src="../Images/8.png"/></div>
 
 
   <p lang="zh-hans">平行四边形只是比喻。但是在“无知之幕”下，双方考虑互换位置的可能，不以损害对方而以奉行“最大化最小值规则”的方式追求满足，被双方共同当作最好结果达成的求和，因此的确会像精确的对角线那样恰好公平，既是双方的合作所在，又是平等的节制所在。</p>
