--- a/epub_src/OEBPS/Text/12.xhtml
+++ b/epub_src/OEBPS/Text/12.xhtml
@@ -15,7 +15,7 @@
   <button onclick="switchLang('all')">All</button>
 </div>
 
-  <h1 lang="zh-hans"><span lang="zh-hans">第十二章、实现超越</span><span lang="en">Chapter 12. Achieving Transcendence</span></h1>
+  <h1><span lang="zh-hans">第十二章、实现超越</span><span lang="en">Chapter 12. Achieving Transcendence</span></h1>
 
 <p lang="zh-hans">【<b>本章提要：</b>递进自组织可以解决代议制难以解决的Vetocracy、民族主义与消费主义。】</p>
 <p lang="en">Chapter synopsis: Recursive self-organization can solve the problems that is impossible to solve for the representative democracy, such as vetocracy(veto politics), nationalism, and consumerism.</p>
