--- a/epub_src/OEBPS/Text/13.xhtml
+++ b/epub_src/OEBPS/Text/13.xhtml
@@ -15,7 +15,7 @@
   <button onclick="switchLang('all')">All</button>
 </div>
 
-  <h1 lang="zh-hans"><span lang="zh-hans">第十三章、转型</span><span lang="en">Chapter 13. Transformation</span></h1>
+  <h1><span lang="zh-hans">第十三章、转型</span><span lang="en">Chapter 13. Transformation</span></h1>
 
 <p lang="zh-hans">【<b>本章提要：</b>用递进自组织的方法实现递进自组织本身，形成人类社会按照社会意志驶向未来的自动车。】</p>
 <p lang="en">Chapter synopsis: Using the method of recursive self-organizing to achieve recursive self-organization itself, forming an automatic car for human society to drive towards the future according to societal will.</p>
@@ -123,7 +123,7 @@
 <p lang="zh-hans">递进自组织比代议制有更丰富的理想资源，在人民主权、全民参政、向量求和、自治、联邦、族群问题等方面，可以独辟通途，占据制高点，形成独树一帜的意识形态。在形式上，也可让中共找到与其原本思想脉络的连接点，实现某种承先启后。</p>
 <p lang="en">Recursive self-organization has richer ideal resources compared to representative democracy. It can offer unique perspectives on issues such as people's sovereignty, widespread participation, vector summation, autonomy, federation, and ethnic concerns, establishing a distinctive ideological framework and holding a strategic position. In terms of form, it can also enable the Chinese Communist Party (CCP) to find connection points with its original ideological context, achieving a form of continuity and innovation.</p>
 
-<h2 id="sigil_toc_id_66" lang="zh-hans">13.6 <span lang="zh-hans">民间之路</span><span lang="en">The Grassroots Way</span></h2>
+<h2 id="sigil_toc_id_66">13.6 <span lang="zh-hans">民间之路</span><span lang="en">The Grassroots Way</span></h2>
 
 <p lang="zh-hans">专制者自我改革的概率仅如凤毛麟角，无法寄予希望。而民众自下而上以递进自组织置换公权组织，需事先广泛传播理念，才能大范围同步开始。做不到这一点，在专制权力有能力镇压时难以突破；在专制权力衰落时，抢先崛起的占山为王者照样会拒绝递进自组织。</p>
 <p lang="en">"The probability of self-reform by autocrats is extremely rare, and there is little hope to be placed in it. On the other hand, for the people to replace public power organizations from the bottom up through recursive self-organization, the ideas need to be widely disseminated in advance to start synchronously on a large scale. Without achieving this, it is difficult to break through when autocratic power has the ability to suppress; when autocratic power declines, those who rise first may still reject recursive self-organization."</p>
@@ -143,7 +143,7 @@
 <p lang="zh-hans">这种递进自组织虽不涉政治，理念和方法却能在推广过程中为民众所掌握。可复制性是递进自组织转型的最大优势，局部成功的样板可以通过不断复制的模式扩大——既可以是受样板吸引的自发复制，也可以是有组织的推广。一旦历史条件成熟，便可迅速复制于公权组织，用于政治转型。具备这样的基础，届时其他力量都无力成为递进自组织的对手。</p>
 <p lang="en">Although this recursive self-organization does not involve politics, its concepts and methods can be grasped by the public during the promotion process. The replicability is the greatest advantage of the transformation through recursive self-organization, as the successful models in specific areas can be expanded through a continuous replication model—either through spontaneous replication inspired by the models or through organized promotion. Once the historical conditions are ripe, it can be rapidly replicated within public organizations for political transformation. With such a foundation, other forces will be powerless to oppose recursive self-organization at that time.</p>
 
-<h2 id="sigil_toc_id_67">16.7 <span lang="zh-hans">沟通改变世界</span><span lang="en">Communication Changes the World</span></h2>
+<h2 id="sigil_toc_id_67">13.7 <span lang="zh-hans">沟通改变世界</span><span lang="en">Communication Changes the World</span></h2>
 
 <p lang="zh-hans">在缺乏沟通能力的时代，社会分离为二元是不可避免的宿命。步入信息时代，沟通能力前所未有地增强，新的沟通技术给递进自组织提供了强大支持。例如递进自组织的多种参与方式——公权组织，众权组织；每人可按居住地、工作地、不同项目等参加；选举时需要计算票权，进行认证，根据选举结果进行权限转移……成员因此可能有多种身份，仅身份管理就异常繁杂，还需跟踪变化、维护规则、进行监察等，如果都靠人管理，相当困难且易错，还难免人为干扰。然而拜资讯时代所赐的电脑网路，既能迅速、便捷、缜密地管理，又能杜绝私情舞弊。智慧型手机进一步提供了全民参与的技术基础，为递进自组织插上翅膀。可以预期社会组织的水平会因“递进自组织+移动网路”得到前所未有的飞跃。</p>
 <p lang="en">In an era lacking communication capabilities, society separation into dualistic is an inevitable fate. With the advent of the information age, communication capabilities have been unprecedentedly enhanced, and new communication technologies provide robust support for recursive self-organization. For instance, various participation methods in recursive self-organization—public power organizations, collective power organizations; individuals participating based on residence, workplace, different projects, etc.; the need to calculate voting rights during elections, conduct authentication, transfer permissions based on election results, etc. Members may have multiple identities, and identity management alone is exceptionally complex. It requires tracking changes, maintaining rules, conducting supervision, etc. If all this is managed by humans, it is quite challenging, prone to errors, and susceptible to human interference. However, thanks to the information age and computer networks, which allow rapid, convenient, and precise management, as well as the prevention of personal biases and fraud. Smartphones further provide the technological foundation for universal participation, giving recursive self-organization wings. It can be anticipated that the horizontal development of societal organizations will experience an unprecedented leap due to "recursive self-organization + mobile networks."</p>
